Fix CUPS compilation error in OSX 10.12.

BUG=622493

Review-Url: https://codereview.chromium.org/2248343002
Cr-Commit-Position: refs/heads/master@{#412670}

Former-commit-id: 29c1262dbd4f749dd514d05a571cdd809ba8cfe0